# umbreon_zephyr

./: .gitignore  AGENTS.md  CMakeLists.txt  CODE_AUDIT.md  LICENSE  LOGGING_AUDIT.md  Makefile  README.md  prj.conf  setup_zephyr.sh  usb_console.conf
.cursor/plans/: hil_bridge_integration_18ace084.plan.md
.github/workflows/: build.yml
boards/: hil_no_sensors.overlay  rpi_pico2_rp2350a_m33.overlay  usb_console.overlay
docs/: TODO.md  control-algorithm.md  hardware.md  porting-notes.md  robot-description.md  self-hosted-ci.md  tuning-guide.md  wifi-protocol.md
docs/ci-backup/: build.cloud.yml
modules/ssd1306_oled/: CMakeLists.txt  Kconfig
modules/ssd1306_oled/drivers/display/: CMakeLists.txt  ssd1306_oled.c  ssd1306_oled_regs.h
modules/ssd1306_oled/zephyr/: module.yml
modules/vl53l0x_enhanced/: CMakeLists.txt  Kconfig
modules/vl53l0x_enhanced/drivers/sensor/vl53l0x/: CMakeLists.txt  vl53l0x_enhanced.c  vl53l0x_platform.c  vl53l0x_platform.h
modules/vl53l0x_enhanced/include/: vl53l0x_enhanced.h
modules/vl53l0x_enhanced/zephyr/: module.yml
src/: battery.c  battery.h  car.c  car.h  control.c  control.h  display.c  display.h  encoder.c  encoder.h  imu.c  imu.h  main.c  sensors.c  sensors.h  settings.c  settings.h  tachometer.c  tachometer.h  tests.c  tests.h  track_learn.c  track_learn.h  vl53l0x_fast.c  vl53l0x_fast.h  wifi_cmd.c  wifi_cmd.h
tests/: Makefile  test_maneuver  test_maneuver.c  test_runner.h  test_unit  test_unit.c  zephyr_stubs.h
tests/ztest/: CMakeLists.txt  prj.conf  testcase.yaml
tests/ztest/src/: main.c  test_common.h  test_cyc_delta.c  test_map_val.c  test_parse_set.c  test_speed.c
tools/: hil_bridge.py  run_hil_dual.sh  run_hil_real.sh  run_hil_sim.sh
